# sistema_indicadores

./: .editorconfig  .env.dist  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/key_performance_indicators/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/sistema-indicadores/: __init__.py
src/sistema_indicadores/: __init__.py  __main__.py  apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
src/sistema_indicadores/api/: serializers.py  urls.py  views.py
src/sistema_indicadores/migrations/: 0001_initial.py
src/sistema_indicadores/templates/sistema_indicadores/: index.html
src/sistema_indicadores/tests/: factories.py  test_api.py
